# OpenGL-StarterPack

./: CMakeLists.txt
.cache/clangd/index/: glad.c.D83B744FBF7EE19B.idx  glad.h.59574D646989CCEC.idx  glfw3.h.79E6F5194FFD0FF3.idx  khrplatform.h.8D329B4ECEA13A05.idx  main.c.60DDCC8451A8C27D.idx
include/glad/: glad.h
src/: glad.c  main.c
